# GeometryDash2

./: .clang-format  .gitignore  CMakeLists.txt  README.md  TODO.md
assets/fonts/: font-credits.txt
assets/map/tiled/: level-1.tmx  levels.tiled-session
dependencies/: CMakeLists.txt
include/: AssetManager.h  GeometryDash.h  MainMenuState.h  OptionsState.h  PlayState.h  State.h  Window.h
include/game/: Arena.h  ArenaItem.h  Collision.h  GameObject.h  PauseState.h  Player.h  SettingsState.h
include/gui/: Button.h  Panel.h  Slider.h
src/: AssetManager.cpp  GeometryDash.cpp  MainMenuState.cpp  OptionsState.cpp  PlayState.cpp  Window.cpp  main.cpp  test.cpp
src/game/: Arena.cpp  ArenaItem.cpp  Collision.cpp  PauseState.cpp  Player.cpp  SettingsState.cpp
src/gui/: Button.cpp  Panel.cpp  Slider.cpp
